--- a/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/Hdn.Core.Architecture.Api.csproj
+++ b/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/Hdn.Core.Architecture.Api.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Hdn.Core.Architecture.Application\Hdn.Core.Architecture.Application.csproj" />
+    <ProjectReference Include="..\Hdn.Core.Architecture.Infrastructure.Identity\Hdn.Core.Architecture.Infrastructure.Identity.csproj" />
     <ProjectReference Include="..\Hdn.Core.Architecture.Infrastructure.Persistence\Hdn.Core.Architecture.Infrastructure.Persistence.csproj" />
   </ItemGroup>
 
