--- a/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/appsettings.Development.json
+++ b/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/appsettings.Development.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-QCM5AL0;Initial Catalog=CleanArchitectureApplicationDb;Integrated Security=True;MultipleActiveResultSets=True",
-    "IdentityConnection": "Data Source=DESKTOP-QCM5AL0;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=CleanArchitectureApplicationDb;Integrated Security=True;MultipleActiveResultSets=True",
+    "IdentityConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "JWTSettings": {
     "Key": "C1CF4B7DC4C4175B6618DE4F55CA4",
