--- a/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/appsettings.json
+++ b/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=CleanArchitectureApplicationDb;Integrated Security=True;MultipleActiveResultSets=True",
+    "IdentityConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
+  },
+  "JWTSettings": {
+    "Key": "C1CF4B7DC4C4175B6618DE4F55CA4",
+    "Issuer": "CoreIdentity",
+    "Audience": "CoreIdentityUser",
+    "DurationInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
