--- a/hdn.net.architecture/hdn.net.architecture/hdn.net.architecture.WebApi/appsettings.json
+++ b/hdn.net.architecture/hdn.net.architecture/hdn.net.architecture.WebApi/appsettings.json
@@ -1,8 +1,10 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-QCM5AL0;Initial Catalog=CleanArchitectureApplicationDb;Integrated Security=True;MultipleActiveResultSets=True",
-    "IdentityConnection": "Data Source=DESKTOP-QCM5AL0;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureApplicationDb;Trusted_Connection=true;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=identityDb;Trusted_Connection=true;MultipleActiveResultSets=true"    
+    // "DefaultConnection": "Data Source=DESKTOP-QCM5AL0;Initial Catalog=CleanArchitectureApplicationDb;Integrated Security=True;MultipleActiveResultSets=True",
+    // "IdentityConnection": "Data Source=DESKTOP-QCM5AL0;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "Serilog": {
     "Using": [],
