Alteração Db e configuração automapper para o tenant

--- a/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/appsettings.Development.json
+++ b/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/appsettings.Development.json
@@ -7,8 +7,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=CleanArchitectureApplicationDb;Integrated Security=True;MultipleActiveResultSets=True",
-    "IdentityConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureApplicationDb;Trusted_Connection=true;MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=identityDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=CleanArchitectureApplicationDb;Integrated Security=True;MultipleActiveResultSets=True",
+    //"IdentityConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
   },
   "JWTSettings": {
     "Key": "C1CF4B7DC4C4175B6618DE4F55CA4",
