--- a/Hdn.Core.Architecture/Hdn.Core.Architecture.Infrastructure.Identity/Hdn.Core.Architecture.Infrastructure.Identity.csproj
+++ b/Hdn.Core.Architecture/Hdn.Core.Architecture.Infrastructure.Identity/Hdn.Core.Architecture.Infrastructure.Identity.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210505203838_update-user.cs" />
+    <Compile Remove="Migrations\20210505203838_update-user.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
