--- a/Hdn.Core.Architecture/Hdn.Core.Architecture.Infrastructure.Persistence/Hdn.Core.Architecture.Infrastructure.Persistence.csproj
+++ b/Hdn.Core.Architecture/Hdn.Core.Architecture.Infrastructure.Persistence/Hdn.Core.Architecture.Infrastructure.Persistence.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20210504195532_tenantAplication.cs" />
+    <Compile Remove="Migrations\20210504195532_tenantAplication.Designer.cs" />
+    <Compile Remove="Migrations\20210505223203_tenantUpdate.cs" />
+    <Compile Remove="Migrations\20210505223203_tenantUpdate.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
