--- a/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/appsettings.Development.json
+++ b/Hdn.Core.Architecture/Hdn.Core.Architecture.Api/appsettings.Development.json
@@ -7,8 +7,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureApplicationDb;Trusted_Connection=true;MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=identityDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureApplicationDb;Trusted_Connection=true;MultipleActiveResultSets=true",
+    //"IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=identityDb;Trusted_Connection=true;MultipleActiveResultSets=true",
+    "DefaultConnection": "Data Source=SAMSUNG-SAMARA-;Initial Catalog=CleanArchitectureApplicationDb;Integrated Security=True;MultipleActiveResultSets=True",
+    "IdentityConnection": "Data Source=SAMSUNG-SAMARA-;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
     //"DefaultConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=CleanArchitectureApplicationDb;Integrated Security=True;MultipleActiveResultSets=True",
     //"IdentityConnection": "Data Source=DESKTOP-EUNGQGA\\SQLEXPRESS;Initial Catalog=identityDb;Integrated Security=True;MultipleActiveResultSets=True"
   },
