--- a/src/Hdn.Core.Architecture.Infrastructure/Hdn.Core.Architecture.Infrastructure.csproj
+++ b/src/Hdn.Core.Architecture.Infrastructure/Hdn.Core.Architecture.Infrastructure.csproj
@@ -21,4 +21,8 @@
       <ProjectReference Include="..\Hdn.Core.Architecture.Application\Hdn.Core.Architecture.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
