--- a/src/Hdn.Core.Architecture.WebApi/appsettings.json
+++ b/src/Hdn.Core.Architecture.WebApi/appsettings.json
@@ -1,9 +1,13 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform
 */
+  "UseInMemoryDatabase": true,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=HdnCoreArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "qualified.domain.name",
@@ -19,5 +23,6 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //TODO: Não deixar para acesso geral quando for para produção
   "AllowedHosts": "*"
 }
