--- a/src/Hdn.Core.Architecture.WebApi/Hdn.Core.Architecture.WebApi.csproj
+++ b/src/Hdn.Core.Architecture.WebApi/Hdn.Core.Architecture.WebApi.csproj
@@ -10,6 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Services\**" />
+    <Content Remove="Services\**" />
+    <EmbeddedResource Remove="Services\**" />
+    <None Remove="Services\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" />
@@ -22,10 +29,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Hdn.Core.Architecture.Application\Hdn.Core.Architecture.Application.csproj" />
     <ProjectReference Include="..\Hdn.Core.Architecture.Infrastructure\Hdn.Core.Architecture.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
